New entries should be added at the top

2005-06-13 Exposed cap and join style for lines with new rc params and
           line properties 

	lines.dash_joinstyle : miter        # miter|round|bevel
	lines.dash_capstyle : butt          # butt|round|projecting
	lines.solid_joinstyle : miter       # miter|round|bevel
	lines.solid_capstyle : projecting   # butt|round|projecting


2005-06-13 Added kwargs to Axes init

2005-06-13 Applied Baptiste's tick patch - JDH

2005-06-13 Fixed rc alias 'l' bug reported by Fernando by removing
           aliases for mainlevel rc options. - JDH

2005-06-10 Fixed bug #1217637 in ticker.py - DSD

2005-06-07 Fixed a bug in texmanager.py: .aux files not being removed - DSD

2005-06-08 Added Sean Richard's hist binning fix -- see API_CHANGES - JDH

2005-06-07 Fixed a bug in texmanager.py: .aux files not being removed
           - DSD


=====================================================================

2005-06-07 matplotlib-0.81 released

2005-06-06 Added autoscale_on prop to axes

2005-06-06 Added Nick's picker "among" patch - JDH

2005-06-05 Fixed a TeX/LaTeX font discrepency in backend_ps. - DSD

2005-06-05 Added a ps.distill option in rc settings. If True, postscript
           output will be distilled using ghostscript, which should trim
           the file size and allow it to load more quickly. Hopefully this
           will address the issue of large ps files due to font 
           definitions. Tested with gnu-ghostscript-8.16. - DSD

2005-06-03 Improved support for tex handling of text in backend_ps. - DSD 

2005-06-03 Added rc options to render text with tex or latex, and to select 
           the latex font package. - DSD

2005-06-03 Fixed a bug in ticker.py causing a ZeroDivisionError

2005-06-02 backend_gtk.py remove DBL_BUFFER, add line to expose_event to
           try to fix pygtk 2.6 redraw problem - SC

2005-06-01 The default behavior of ScalarFormatter now renders scientific 