@@ -74,6 +74,7 @@ _Plotting commands
   table    - add a table to the plot
   text     - add some text at location x,y to the current axes
   thetagrids - customize the radial theta grids and labels for polar
+  subplots_adjust - change the params controlling the subplot positions of current figure
   title    - add a title to the current axes
   xlim     - set/get the xlimits
   ylim     - set/get the ylimits
@@ -215,6 +216,7 @@ from lines import Line2D
 from text import Text
 from patches import Polygon, Rectangle, Circle, Arrow
 from transforms import blend_xy_sep_transform
+from widgets import SubplotTool
 
 import numerix as nx
 
@@ -1498,6 +1500,35 @@ def setp(*args, **kwargs):
 if _setp.__doc__ is not None:
     setp.__doc__ = _setp.__doc__
 
+
+def subplots_adjust(*args, **kwargs):
+    """
+    subplots_adjust(left=None, right=None, bottom=None, top=None, wspace=0.2, hspace=0.2)
+
+    Tune the subplot layout via the figure.SubplotParams mechanism.
+    The parameter meanings (and suggested defaults) are
+
+      left  = 0.125  # the left side of the subplots of the figure
+      right = 0.9    # the right side of the subplots of the figure
+      bottom = 0.1   # the bottom of the subplots of the figure
+      top = 0.9      # the top of the subplots of the figure
+      wspace = 0.2   # the amount of width reserved for blank space between subplots
+      hspace = 0.2   # the amount of height reserved for white space between subplots        
+
+    The actual defaults are controlled by the rc file    
+    """
+    fig = gcf()
+    fig.subplots_adjust(*args, **kwargs)
+    draw_if_interactive()
+    
+
+def subplot_tool(targetfig=None):
+    'Launch a subplot tool window for targetfig (default gcf)'
+    if targetfig is None: targetfig = gcf()
+
+    toolfig = figure(figsize=(6,4))
+    SubplotTool(targetfig, toolfig)
+    
 ### The following functions were autogenerated by the boilerplate.py
 ### script.  They are simple wrappers around the Axes methods of the
 
